2011-06-14  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.0.5 and 2.0.6.
	* ext/oci8/apiwrap.yml, ext/oci8/lob.c: fix SEGV when freeing a temporary
	    LOB during GC on rubinius 1.2.3.
	* ext/oci8/oci8lib.c: revert the exception type from RuntimeError to
	    OCIException when a closed OCI handle's method is called.
	    It was chaned in 2.0.5 by mistake.

2011-06-12  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.0.4 and 2.0.5.

2011-06-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: add __declspec(dllexport) to Init_oci8lib(). The mingw32
	    gcc compiler doesn't export functions without it if more than one function
	    is declared with it.
	* ext/oci8/oraconf.rb: work around for rubinius 1.2.3, which doesn't support
	    Array#pack('P').
	* lib/oci8/oci8.rb: fix a bug introduced by the previous commit.
	* ext/oci8/env.c, ext/oci8/extconf.rb, ext/oci8/oci8.c, ext/oci8/oci8.h,
	  ext/oci8/oci8lib.c: Use HAVE_RB_THREAD_BLOCKING_REGION instead of
	    HAVE_TYPE_RB_BLOCKING_FUNCTION_T. have_type("rb_blocking_function_t", "ruby.h")
	    unexpectedly doesn't work on Visual Studio 2010.

2011-06-10  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, lib/oci8/oci8.rb: fix for Psych YAML library.
	* ext/oci8/extconf.rb, ext/oci8/oci8.h, ext/oci8/ocihandle.c: fix to
	    work with ruby 1.9.3dev.

2011-06-10  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/env.c, ext/oci8/oci8.h: Free OCI error handles on the
	    native thread termination, not on the ruby thread termination.
	    (reported by Jordan Curzon and Aaron Qian)
	    See: http://rubyforge.org/forum/forum.php?thread_id=49751&forum_id=1078

2011-02-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c, ext/oci8/metadata.c, ext/oci8/oci8.c,
	  ext/oci8/oci8.h, ext/oci8/oci8lib.c, ext/oci8/stmt.c:
	    fix segmentation fault when calling OCI8::Cursor#[] for
	    closed statement object's (reported by Hugo L. Borges)

2011-02-01  KUBO Takehiro  <kubo@jiubao.org>