@@ -756,7 +756,6 @@ static VALUE oci8_set_client_identifier(VALUE self, VALUE val)
 {
     char *ptr;
     ub4 size;
-    int use_attr_set = 1;
 
     if (!NIL_P(val)) {
         OCI8SafeStringValue(val);
@@ -767,20 +766,14 @@ static VALUE oci8_set_client_identifier(VALUE self, VALUE val)
         size = 0;
     }
 
-    if (oracle_client_version < ORAVER_9_0) {
-        use_attr_set = 0;
-    } else if (oracle_client_version < ORAVERNUM(9, 2, 0, 3, 0) && size == 0) {
-        /* Workaround for Bug 2449486 */
-        use_attr_set = 0;
-    }
-
-    if (use_attr_set) {
+    if (oracle_client_version >= ORAVERNUM(9, 2, 0, 3, 0) || size >= 0) {
         if (size > 0 && ptr[0] == ':') {
             rb_raise(rb_eArgError, "client identifier should not start with ':'.");
         }
         oci_lc(OCIAttrSet(oci8_get_oci_session(self), OCI_HTYPE_SESSION, ptr,
                           size, OCI_ATTR_CLIENT_IDENTIFIER, oci8_errhp));
     } else {
+        /* Workaround for Bug 2449486 */
         oci8_exec_sql_var_t bind_vars[1];
 
         /* :client_id */
